--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,8 @@
 {
-  "extends": "eslint:recommended"
+  "extends": "eslint:recommended",
+  "env": {
+    "es6": false,
+    "browser": true,
+    "node": true
+  }
 }
