--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "precommit": "lint-staged",
     "format": "prettier --single-quote --write '{,lib/**/,test/**/}*.js'",
     "lint": "eslint .",
     "test-jest": "jest",
@@ -26,11 +25,11 @@
   },
   "homepage": "https://github.com/mapbox/appropriate-images-get-url#readme",
   "devDependencies": {
-    "eslint": "^4.1.1",
-    "husky": "^0.14.3",
-    "jest": "^20.0.4",
-    "lint-staged": "^4.0.0",
-    "prettier": "^1.5.2"
+    "eslint": "^7.12.1",
+    "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2"
   },
   "lint-staged": {
     "**/*.js": [
@@ -47,5 +46,10 @@
       "html"
     ],
     "clearMocks": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
