--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.1.0",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --single-quote --write '{,lib/**/,test/**/}*.js'",
+    "format": "prettier --single-quote --write --trailing-comma es5 '{,lib/**/,test/**/}*.js'",
     "lint": "eslint .",
     "test-jest": "jest",
     "pretest": "npm run lint",
@@ -25,11 +25,11 @@
   },
   "homepage": "https://github.com/mapbox/appropriate-images-get-url#readme",
   "devDependencies": {
-    "eslint": "^7.23.0",
-    "husky": "^4.3.8",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1"
+    "eslint": "^8",
+    "husky": "^8",
+    "jest": "^29",
+    "lint-staged": "^15",
+    "prettier": "^3"
   },
   "lint-staged": {
     "**/*.js": [
